--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 message=Hello world!!!!!!!!!!!
+
+spring.cache.timeout=1000
+spring.cache.size=100
+spring.cache.update.period=5000
+
+library.prop1=val1
